tests/should-fail/pjass-tests/strange-characters.j
function test takes nothing returns nothing 
endfunction
